--- a/src/reset.css
+++ b/src/reset.css
@@ -5,7 +5,7 @@
 
 :root {
   --primary: #95101A;
-  --black: #000000;
+  --black: #141414;
   --blackLighter: #9E9E9E;
   --grayLight: #F5F5F5;
   --grayMedium: #e5e5e5; 
@@ -18,6 +18,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 a {
